# wynter-code

./: .farmwork.json  .gitignore  CLAUDE.md  IDEAS.md  LAUNCH.md  LAYOUT_PLAN.md  LICENSE  PREPARE_ICON.md  README.md  UPDATE.md  Wynter.Code_1.1.5_aarch64.app.tar.gz.sig  Wynter.Code_1.1.6_aarch64.app.tar.gz.sig  Wynter.Code_1.1.7_aarch64.app.tar.gz.sig  eslint.config.js  index.html  justfile  latest.json  package.json  pnpm-lock.yaml  release.sh  tailwind.config.js  vite.config.farmwork.ts  vite.config.ts  vitest.config.ts
.beads/: .autobuild-backlog.json  issues.jsonl
.claude/agents/: accessibility-auditor.md  code-cleaner.md  code-reviewer.md  code-smell-auditor.md  i18n-locale-translator.md  idea-gardener.md  performance-auditor.md  rust-code-auditor.md  security-auditor.md  storybook-maintainer.md  tauri-security-auditor.md  test-scaffolder.md  the-farmer.md  unused-code-cleaner.md
.claude/commands/: push.md
.github/workflows/: release.yml
_AUDIT/: ACCESSIBILITY.md  CODE_QUALITY.md  COMPOST.md  FARMHOUSE.md  GARDEN.md  PERFORMANCE.md  RUST.md  SECURITY.md  TAURI_SECURITY.md  TESTS.md
_PLANS/: API_TESTING_TOOL.md  AUTO_BUILD_QUALITY_GATES.md  CLAUDE_CODE_STATS.md  COLOR_PICKER.md  DATABASE_VIEWER.md  ENVIRONMENT_VARIABLES.md  FAVICON_GENERATOR.md  FILE_COMPRESSION.md  GITHUB_MANAGER.md  MCP_MANAGER.md  MCP_PERMISSION_INTEGRATION.md  MOBILE_APP.md  MOBILE_FEATURES.md  MULTI_MODEL_SUPPORT.md  MULTI_PANEL_LAYOUT.md  OVERWATCH.md  PIXIJS_GAME_MODE.md  PLUGIN_ARCHITECTURE.md  PROJECT_STARTER_TEMPLATES.md  RAYCAST_LAUNCHER.md  TEST_RUNNER.md  WEB_RELAY_SYSTEM.md  WORKSPACES.md
_RESEARCH/: CLAUDE_CLI.md  CODEX_CLI.md  CURSOR_COMPOSER.md  GEMINI_CLI.md
dist-farmwork/: index.html
dist-farmwork/assets/: SharedSystems-BAH-xjfT.js  SharedSystems-BXUjnKeD.js  SharedSystems-BhIujWX_.js  SharedSystems-CUDeXSze.js  SharedSystems-D0QsoZFL.js  WebGLRenderer-3Yy7fSot.js  WebGLRenderer-CMTfYkzc.js  WebGLRenderer-DDCf91wd.js  WebGLRenderer-Dopi2San.js  WebGLRenderer-cBdDmu7U.js  WebGPURenderer-B4I60VvR.js  WebGPURenderer-CBETMomR.js  WebGPURenderer-DDPYzyNS.js  WebGPURenderer-DJEVpXD-.js  WebGPURenderer-Ry5Mfhew.js  browserAll-9_R6S0DI.js  browserAll-CIcN0D7_.js  browserAll-CNqRT5Zi.js  browserAll-COuUjqRY.js  browserAll-DU1lD9ow.js  index-BCrIG3oD.css  index-BLz9eqwu.js  index-BgpkgGO8.js  index-CEIjQ7Nq.js  index-CHzGUR7s.js  index-DT8-_2U5.css  index-DVraeV3-.js  index-DcznH1YV.css  index-Dh_AYVw9.css  index-V9BZt3BX.css  webworkerAll-C1kPCO9B.js  webworkerAll-CTTGTHDG.js  webworkerAll-DTHaCjBO.js  webworkerAll-Dj9s7PQ9.js  webworkerAll-DuguPJgB.js
scripts/: bump-version.js  mcp-file-coordinator.mjs  mcp-permission-server.mjs  prepare-icons.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: browser-view.json  color-magnifier.json  color-picker.json  default.json  launcher.json
src-tauri/src/: api_tester.rs  audio_proxy.rs  auto_build.rs  beads.rs  browser_dock.rs  camera_permission.rs  claude_process.rs  codex_process.rs  color_picker.rs  cost_popup.rs  database_viewer.rs  domain_tools.rs  file_coordinator.rs  gemini_process.rs  gif_capture.rs  gif_recorder_window.rs  github.rs  homebrew.rs  launcher.rs  limits_monitor.rs  live_preview.rs  main.rs  mcp_permission_server.rs  mobile_api.rs  netlify_backup.rs  overwatch.rs  path_utils.rs  process_registry.rs  rate_limiter.rs  relay_client.rs  storybook.rs  system_cleaner.rs  terminal.rs  tunnel.rs  vibrancy.rs  watcher.rs  webcam_window.rs
src-tauri/src/commands/: mod.rs  search.rs
src/farmwork-standalone/: App.tsx  api.ts  index.html  index.tsx
src/hooks/: useAIAssistant.ts  useAppFont.ts  useAudioAnalyser.ts  useBackupScheduler.ts  useCommandItems.ts  useCommandItems.tsx  useCompression.test.ts  useCompression.ts  useCopyWithFeedback.ts  useCustomMusic.ts  useDraggable.ts  useFarmworkDetection.ts  useFileOperations.test.ts  useFileOperations.ts  useGitStatus.ts  useJustfileDetection.ts  useKanbanAI.ts  useKeyboardShortcuts.ts  useLauncherSearch.test.ts  useLauncherSearch.ts  useMonacoTheme.ts  useStorybookDetection.ts  useStreamMetadata.ts
src/lib/: ansiFilter.ts  colorUtils.ts  constants.test.ts  constants.ts  debug.ts  errorHandler.test.ts  errorHandler.ts  farmwork-parsers.test.ts  farmwork-parsers.ts  farmworkPhrases.ts  parseCliDiff.test.ts  parseCliDiff.ts  sensitiveKeyDetection.test.ts  sensitiveKeyDetection.ts  slashCommandHandler.test.ts  slashCommandHandler.ts  slashCommands.ts  storageUtils.test.ts  storageUtils.ts  terminalTheme.ts  urlSecurity.test.ts  urlSecurity.ts  utils.test.ts  utils.ts
src/services/: audioProxy.ts  autoBuildGameBridge.ts  backupOrchestrator.ts  backupTemplateGenerator.ts  claude.ts  codex.ts  encryption.test.ts  encryption.ts  farmworkBridge.ts  gemini.ts  geminiImageService.ts  git.test.ts  git.ts  github.ts  index.ts  modelLimits.test.ts  modelLimits.ts  providerVersion.ts  radioBrowser.ts  streamingBuffer.ts
src/stores/: apiTesterStore.ts  autoBuildStore.ts  beadsStore.test.ts  beadsStore.ts  bookmarkStore.ts  browserDockStore.ts  claudeStore.ts  codespaceStore.ts  colorPickerStore.ts  commandPaletteStore.ts  databaseViewerStore.ts  docsStore.ts  dragStore.ts  envStore.ts  farmworkTycoonStore.ts  fileIndexStore.ts  githubManagerStore.ts  homebrewStore.ts  index.ts  justfileStore.ts  kanbanStore.ts  launcherStore.ts  livePreviewStore.ts  mcpStore.ts  meditationStore.ts  minimizedPopupsStore.ts  mobileApiStore.ts  netlifyFtpStore.ts  onboardingStore.ts  overwatchStore.ts  panelStore.ts  popupRegistryStore.ts  projectStore.test.ts  projectStore.ts  searchStore.ts  sessionSelectors.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  (+6 more)
src/styles/: globals.css
src/test/: setup.ts
src/types/: apiTester.ts  autoBuild.ts  beads.ts  claude.ts  codespace.ts  (+27 more)
(+537 files in other folders)
