[package]
name = "wynter-code"
version = "1.0.0"
description = "An opinionated workflow GUI for Claude Code"
homepage = "https://code.wynter.ai"
authors = ["Wynter Jones"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trash = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
base64 = "0.22"
serde_yaml = "0.9"
chrono = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
regex = "1"
sysinfo = "0.31"

# Live preview server
tiny_http = "0.12"
tungstenite = "0.24"
local-ip-address = "0.6"

# macOS color picker (NSColorSampler)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
block = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
