[package]
name = "wynter-code"
version = "1.0.0"
description = "An opinionated workflow GUI for Claude Code"
homepage = "https://code.wynter.ai"
authors = ["Wynter Jones"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trash = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
base64 = "0.22"
serde_yaml = "0.9"
chrono = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
regex = "1"
sysinfo = "0.31"
hex = "0.4"

# Live preview server
tiny_http = "0.12"
tungstenite = "0.24"
local-ip-address = "0.6"

# HTTP client for API testing
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# File compression
zip = "2.2"
walkdir = "2"

# Image optimization
oxipng = "9"
image = "0.25"

# PDF optimization
lopdf = "0.34"

# Database viewer (multi-database support)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "tls-rustls", "chrono", "uuid", "json"] }

# macOS color picker (NSColorSampler)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
block = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
