[package]
name = "wynter-code"
version = "1.1.7"
description = "An opinionated workflow GUI for Claude Code"
homepage = "https://code.wynter.ai"
authors = ["Wynter Jones"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png", "unstable"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trash = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
base64 = { version = "0.22", features = ["std"] }
lazy_static = "1.5"
serde_yaml = "0.9"
chrono = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
regex = "1"
sysinfo = "0.31"
hex = "0.4"
window-vibrancy = "0.5"

# Live preview server
tiny_http = "0.12"
tungstenite = "0.24"
local-ip-address = "0.6"

# HTTP client for API testing
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
urlencoding = "2.1"
url = "2"
native-tls = "0.2"

# Mobile API server
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
mdns-sd = "0.11"
jsonwebtoken = "9"
rand = "0.8"
tokio-stream = "0.1"

# Relay client (E2E encrypted mobile connectivity)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# File compression
zip = "2.2"
walkdir = "2"

# Image optimization
oxipng = "9"
image = "0.25"
webp = "0.3"

# PDF optimization
lopdf = "0.34"

# Database viewer (multi-database support)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "tls-rustls", "chrono", "uuid", "json"] }

# macOS color picker (NSColorSampler)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
block = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
# Suppress warnings from objc crate's msg_send! macro
unexpected_cfgs = "allow"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
